test/valid/64854_coin_flip/coin_flip.agu
-- Author: 64854, Diogo Almeida

let coinFlip (n) : Int -> Int =
    if n % 2 == 1 then 1 else 2

let main(_) : Unit -> Unit =
    print(coinFlip(4))